--- a/src/weatherPage/style.scss
+++ b/src/weatherPage/style.scss
@@ -39,6 +39,7 @@ body {
 
   h2 {
     color: #fff;
+    padding-top: 25px;
     font-size: 32px;
     font-weight: 500;
     text-align: center;
@@ -58,7 +59,7 @@ body {
   }
 
   p{
-      color: #FFF;
+  color: #FFF;
   font-size: 48px;
   font-weight: 700;
   font-style: italic;
