--- a/src/weatherPage/style.scss
+++ b/src/weatherPage/style.scss
@@ -5,10 +5,13 @@ body {
 h1{
     text-align: center;
     color: #FFF;
-    font-size: 36px;
+    font-size: 2rem;
     font-weight: 700;
     font-style: italic;
     text-shadow: 3px 6px rgba(0, 0, 0, 0.25);
+    @media (max-width: 768px){
+      font-size: 1.5rem;
+    }
 }
 
 .Weather {
@@ -17,12 +20,13 @@ h1{
   justify-content: center;
   align-items: center;
   height: 85vh;
-  @media (max-width: 768px){
-    gap: 50px;
+  gap: 15px;
+    @media (max-width: 768px){
+    gap: 15px;
 }
 
   input {
-    width: 30%;
+    width: 70%;
     padding: 15px;
     color: #313131;
     font-size: 20px;
@@ -73,3 +77,36 @@ h1{
   text-shadow: 3px 6px rgba(0, 0, 0, 0.25);
   }
 }
+
+.searchBar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+button{
+  width: 15%;
+    padding: 15px;
+    color: #313131;
+    font-size: 20px;
+    appearance: none;
+    border: none;
+    outline: none;
+    background: none;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 0px 16px 0px 16px;
+    transition: 0.4s;
+    &:hover {
+      box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
+      background-color: rgba(255, 255, 255, 0.75);
+      border-radius: 16px 0px 16px 0px;
+    }
+}
+
+  svg{
+    color: #313131;
+    width: 20px;
+    height: 20px;
+  }
